[tool.poetry]
name = "site.cabsec"
version = "0.1.0"
description = "Website for the orgpedia/cabsec dataset"
authors = ["mukundesh <mukundesh@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
more-itertools = "^9.0.0"
pydantic = "^1.10.4"
lunr = "^0.6.2"
pillow = "^9.4.0"
polyleven = "^0.8"
python-dateutil = "^2.8.2"
babel = "^2.11.0"
jinja2 = "^3.1.2"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
