[tool.poetry]
name = "site.cabsec"
version = "0.1.0"
description = "Website for the orgpedia/cabsec dataset"
authors = ["mukundesh <mukundesh@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "!=3.7.6,!=3.8.1,>3.7.1,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "3.9.2"
isort = "^5.10.1"

docint = { git = "https://github.com/mukundesh/docint.git" }
orgpedia = { git = "https://github.com/orgpedia/orgpedia.git" }
taskipy = "^1.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
