[tool.poetry]
name = "site.cabsec"
version = "0.1.0"
description = "Website for the orgpedia/cabsec dataset"
authors = ["mukundesh <mukundesh@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "!=3.7.6,!=3.8.1,>3.7.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
docint = { git = "https://github.com/mukundesh/docint.git" }
orgpedia = { git = "https://github.com/orgpedia/orgpedia.git" }
orgpedia-cabsec = "^0.0.5"

black = "^22.10.0"
ruff = "^0.0.243"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.yml
  | \.json
  | \.txt
  | \.bak
  | makefile
  | _build
  | buck-out
  | build
  | dist
  | input
  | output
  | logs
  | conf
  | models
  | export
  | documents
)/
'''

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I001"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I001"] # fix only isort issues
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    ".bak",
    "input",
    "output",
    "logs",
    "conf",
    "export",
    "models",
    "documents",
    "data_packages",
    "websites",
    "page_images",
    "html",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7
target-version = "py37"
